[tool.poetry]
name = "rug-be"
version = "0.1.0"
description = ""
authors = ["Jake Lee <jake@diffusion.io>"]
readme = "README.md"
packages = [{include = "source"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
